CHANGES
*******

0.12 (unreleased)
=================

- Fixed a typo in the `defer_link` documentation.

- Morepath's link generation wasn't properly quoting paths and
  parameters in all circumstances where non-ascii characters or
  URL-quoted characters were used. See issue #337.

0.11.1 (2015-06-29)
===================

- setuptools has the nasty habit to change underscores in project
  names to minus characters. This broke the new autoscan machinery for
  packages with an underscore in their name (such as
  `morepath_sqlalchemy`). This was fixed.

0.11 (2015-06-29)
=================

- **Breaking change**. The ``morepath.autoconfig`` and ``morepath.autosetup``
  methods had to be rewritten. Before, Morepath was unable to autoload packages
  installed using ``pip``.

  As a result, Morepath won't be able to autoload packages if the setup.py
  name differs from the name of the distributed package or module.

  For example: A package named ``my-app`` containing a module named ``myapp``
  won't be automatically loaded anymore.

  Packages like this need to be loaded manually now::

    import morepath
    import myapp

    config = morepath.setup()
    config.scan(myapp)
    config.commit()

  See https://github.com/morepath/morepath/issues/319

- The ``config.scan`` method now excludes 'test' and 'tests' directories
  by default.

  See https://github.com/morepath/morepath/issues/326

- The ``template_directory`` directive will no longer inspect the current
  module if the template directory refers to an absolute path. This makes it
  easier to write tests where the current module might not be available.

  Fixes https://github.com/morepath/morepath/issues/299

- The ``identity_policy`` passes ``settings`` to the function if it
  defines such an argument. This way an identity policy can be created
  that takes settings into account.

  See https://github.com/morepath/morepath/issues/309

- Dots in the request path are now always normalized away. Before, Morepath